<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chat_menu_new_chat"
        android:icon="@drawable/ic_menu_new_chatroom"
        android:showAsAction="ifRoom"
        android:title="@string/new_chat"/>
    <item
        android:id="@+id/chat_menu_new_msg"
        android:icon="@drawable/ic_menu_new_message"
        android:showAsAction="ifRoom"
        android:title="@string/new_msg"/>
    <item
        android:id="@+id/chat_menu_contacts"
        android:icon="@drawable/ic_menu_contactbook"
        android:showAsAction="ifRoom"
        android:title="@string/contacts"/>
    <item
        android:id="@+id/chat_menu_prefs"
        android:icon="@drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/preferences"/>
</menu>