<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.NewMessageFragment"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/frag__new_message_chatroom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag__new_message_chat"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/frag__new_message_chatroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/frag__new_message_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag__new_message_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/frag__new_message_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">



            <Button
                android:id="@+id/frag__new_message_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag__new_message_confirm_button"
                android:layout_weight="1" />
            <Button
                android:id="@+id/frag__new_message_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag__new_message_cancel_button"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
